[tool.poetry]
name = "nba-data-processing"
version = "0.1.0"
description = "NBA data preprocessing with Pandas"
authors = ["wisskirchenj <wisskirchen.juergen@gmail.com>"]
package-mode = false
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
pytest = "^8.2.1"
pytest-custom-exit-code = "^0.3.0"
matplotlib = "^3.9.0"
flake8 = "^7.0.0"
requests = "^2.32.2"
scikit-learn = "^1.5.0"
pytest-mock = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
